-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.4.1
-
None
A MouseArea with hoverEnabled set to true, never resets containsMouse if the MouseArea is disabled while it contains the mouse. Expected behavior would be that containsMouse becomes false immediately when the MouseArea is disabled.
Please see the attached code snipped for an example.
- is blocked by
-
QTBUG-30801 Button: tooltip not shown when the button is disabled
-
- Closed
-
- is replaced by
-
QTBUG-106704 HoverHandler and MouseArea: if hover is enabled/disabled but mouse does not move AND no item is marked dirty, state doesn't change immediately
-
- Closed
-
- relates to
-
QTBUG-35660 MouseArea containsMouse sometimes wrong
-
- Closed
-
- replaces
-
QTBUG-29166 MouseArea steals hoverEvents even when it's not enabled
-
- Closed
-
For Gerrit Dashboard: QTBUG-46460 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
432441,2 | QQuickMouseArea: clear hover upon disabling | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
432442,5 | Add hover enable/disable checkboxes to lesHoverables autotest qml | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
433325,5 | QQuickMouseArea: store hoverEnabled explicitly | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
433661,7 | Ensure that item appearance is updated when hover state changes | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
433669,2 | Add MouseArea enable/disable checkboxes to lesHoverables autotest qml | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
434032,2 | QQuickMouseArea: store hoverEnabled explicitly | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
435060,1 | MouseArea and HoverHandler: emit hoveredChanged when [dis|en]abled | dev | qt/qtdeclarative | Status: ABANDONED | +2 | 0 |
435343,2 | Ensure that item appearance is updated when hover state changes | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |