src/quick/items/qquickmousearea_p_p.h
@@ -51,6 +51,7 @@ public:
 #endif
 
     bool enabled : 1;
+    bool hoverEnabled : 1;
     bool scrollGestureEnabled : 1;
     bool hovered : 1;
     bool longPress : 1;
